[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_inventory_pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_inventory_hover.png" type="Texture" id=2]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_inventory.png" type="Texture" id=3]
[ext_resource path="res://assets/Textures_v2/back_charinfo.png" type="Texture" id=4]
[ext_resource path="res://gui_modules/Inventory/Scripts/InventorySlaveListModule.gd" type="Script" id=6]
[ext_resource path="res://gui_modules/Inventory/Scripts/InventoryStatsModule.gd" type="Script" id=8]
[ext_resource path="res://gui_modules/Inventory/Scripts/InventoryMainModule.gd" type="Script" id=10]
[ext_resource path="res://gui_modules/Inventory/Modules/InventoryStatsModule.tscn" type="PackedScene" id=11]
[ext_resource path="res://gui_modules/Inventory/Modules/InventorySlaveListModule.tscn" type="PackedScene" id=12]
[ext_resource path="res://gui_modules/Inventory/Modules/InventoryGearModule.tscn" type="PackedScene" id=13]
[ext_resource path="res://gui_modules/Inventory/Modules/InventoryListModule.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/HintTooltip.tres" type="Theme" id=15]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[node name="InventoryMainModule" type="Panel" groups=["pauseprocess"]]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 649, 788 )
theme = ExtResource( 15 )
script = ExtResource( 10 )

[node name="InventoryBG" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 1 )

[node name="InventoryGearModule" parent="." instance=ExtResource( 13 )]
margin_left = 1200.0
margin_top = 17.3784
margin_right = 1905.0
margin_bottom = 1067.38

[node name="InventoryListModule" parent="." instance=ExtResource( 14 )]
margin_left = 605.0
margin_top = 15.0
margin_right = 1200.0
margin_bottom = 1065.0

[node name="InventorySlaveListModule" parent="." instance=ExtResource( 12 )]
margin_left = 15.0
margin_top = 15.0
margin_right = 610.0
margin_bottom = 1065.0
script = ExtResource( 6 )

[node name="InventoryStatsModule" parent="." instance=ExtResource( 11 )]
margin_left = 229.0
margin_top = 875.0
margin_right = 610.0
margin_bottom = 1065.0
script = ExtResource( 8 )

[node name="GridContainer" type="VBoxContainer" parent="."]
margin_left = 29.0
margin_top = 884.0
margin_right = 223.0
margin_bottom = 1056.0
custom_constants/separation = 38

[node name="CharInfoButton" type="TextureButton" parent="GridContainer"]
margin_right = 194.0
margin_bottom = 58.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="GridContainer/CharInfoButton"]
margin_left = 19.0
margin_top = 13.0
margin_right = 174.0
margin_bottom = 42.0
text = "INVENTORYTOCHARACTER"
align = 1
clip_text = true

[node name="MansionButton" type="TextureButton" parent="GridContainer"]
margin_top = 96.0
margin_right = 194.0
margin_bottom = 154.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="GridContainer/MansionButton"]
margin_left = 19.0
margin_top = 13.0
margin_right = 174.0
margin_bottom = 42.0
text = "INVENTORYTOMANSION"
align = 1
clip_text = true
